# actions-generate-checksum

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  action.yml  checksum.py  entrypoint.sh  flake.nix  pyproject.toml  test.py
.github/workflows/: checksum.yml  ci.yml  push.yml
src/: checksum.py
